# Day26-Track3-MCP-tool-integration

./: .gitignore  .mcp.json  README.md  REPORT.md  pyproject.toml
docker/: docker-compose.yml  init.sql
docs/superpowers/plans/: 2026-05-14-mcp-sqlite-lab.md
docs/superpowers/specs/: 2026-05-14-mcp-sqlite-lab-design.md
implementation/: auth.py  init_db.py  mcp_server.py  verify_server.py
implementation/db/: __init__.py  base.py  errors.py  postgres_adapter.py  sqlite_adapter.py  validators.py
implementation/tests/: _adapter_contract.py  conftest.py  test_auth.py  test_postgres_adapter.py  test_resources.py  test_sqlite_adapter.py  test_tools.py  test_validators.py
scripts/: run-inspector.sh  teardown.sh
