[project]
name = "mcp-sqlite-lab"
version = "0.1.0"
description = "Day 26 Track 3 — FastMCP server backed by SQLite"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
]

[project.optional-dependencies]
postgres = [
    "psycopg[binary]>=3.2",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["implementation/tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.uv]
package = false
